--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 									data-speed="600"
 									data-start="0"
 									data-end="10000"
-									data-endspeed="600">Mordenize your business with a stunning online presense <br>
+									data-endspeed="600"><h3 style="color:#ffffff">Mordenize your business with a stunning online presense <br>
                                     Automate your processes with bespoke solutions that is just right <br>
-                                    Manage your day to day challenges by cost effective software solutions
+                                    Manage your day to day challenges by cost effective software solutions</h3>
 								</div>
 
 								<!-- LAYER NR. 3 -->
@@ -240,7 +240,7 @@
 									data-speed="600"
 									data-start="0"
 									data-end="10000"
-									data-endspeed="600">Increase engagement with customers, be visible and offer wide variety of <br>connected-services based business services with mobile apps.
+                                     data-endspeed="600"><h3 style="color:#ffffff">Increase engagement with customers, be visible and offer wide variety of <br>connected-services based business services with mobile apps.</h3>
 								</div>
 
 								<!-- LAYER NR. 3 -->
@@ -275,41 +275,37 @@
 						<div class="col-md-12">
 							<h1 class="text-center title">Services</h1>
 							<div class="separator"></div>
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							<div class="row grid-space-10">
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-leaf"></i>
+											<i class="fa fa-globe"></i>
 										</div>
 										<div class="body">
-											<h2>Clean Design and Code</h2>
-											<p>Voluptatem ad provident non veritatis beatae cupiditate amet reiciendis.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Website</h2>
+											<p>Simple static website to full blown e-commerce website as it meets your need.</p>
 										</div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-laptop"></i>
+											<i class="fa fa-mobile"></i>
 										</div>
 										<div class="body">
-											<h2>Very Flexible</h2>
-											<p>Iure sequi unde hic. Sapiente quaerat labore inventore veritatis cumque.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Mobile App</h2>
+											<p>Native or Hybrid for all major platforms.</p>
 										</div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-sitemap"></i>
+											<i class="fa fa-search-plus"></i>
 										</div>
 										<div class="body">
-											<h2>Latest Technologies</h2>
-											<p>Inventore dolores aut laboriosam cum consequuntur delectus sequi! Eum est.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Search Engine Optimisation</h2>
+											<p>White hat optimisation for Google and Bing.</p>
 										</div>
 									</div>
 								</div>
@@ -318,36 +314,33 @@
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-bold"></i>
+											<i class="fa fa-gears"></i>
 										</div>
 										<div class="body">
-											<h2>Bootstrap Based</h2>
-											<p>Voluptatem ad provident non veritatis beatae cupiditate amet reiciendis.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Automation</h2>
+											<p>Automate your manual processes and BAU challenges.</p>
 										</div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-check"></i>
+											<i class="fa fa-support"></i>
 										</div>
 										<div class="body">
-											<h2>Unlimited Options</h2>
-											<p>Iure sequi unde hic. Sapiente quaerat labore inventore veritatis cumque.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Backend System / API</h2>
+											<p>Build Systems or APIs to support your services.</p>
 										</div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="box-style-2">
 										<div class="icon-container default-bg">
-											<i class="fa fa-bicycle"></i>
+											<i class="fa fa-thumbs-up"></i>
 										</div>
 										<div class="body">
-											<h2>Easy to Use</h2>
-											<p>Inventore dolores aut laboriosam cum consequuntur delectus sequi! Eum est.</p>
-											<a href="page-services.html" class="link"><span>Read More</span></a>
+											<h2>Consultation</h2>
+											<p>Systems Design and Architecture consultation.</p>
 										</div>
 									</div>
 								</div>
@@ -369,11 +362,11 @@
 						<div class="call-to-action">
 							<div class="row">
 								<div class="col-md-8">
-									<h1 class="title text-center">We offer more possibilities to meet your every need.</h1>
+									<h1 class="title text-center">We help to transform your business to meet morden needs.</h1>
 								</div>
 								<div class="col-md-4">
 									<div class="text-center">
-										<a href="#" class="btn btn-default btn-lg">Purchase</a>
+										<a href="#" class="btn btn-default btn-lg">Contact</a>
 									</div>
 								</div>
 							</div>
@@ -391,11 +384,11 @@
 				<div class="container">
 					<h1 class="text-center">Why Choose Us</h1>
 					<div class="separator"></div>
-					<p class="lead text-center">Lorem ipsum dolor sit amet. Maiores, odio ut deleniti doloremque ad at praesentium<br> laudantium molestias similique. Quisquam incidunt ut laboriosam.</p>
+					<p class="lead text-center">We are right mix of experience and expertise.</p>
 					<div class="row">
-						<div class="col-md-6">
-							<h2 class="title">iDea - Responsive Website Theme</h2>
-							<img src="images/section-image-1.png" alt="">
+						<div class="col-md-6 text-center">
+							<h2 class="title">Wide range of services to help your business.</h2>
+							<img src="images/section-image-7.png" alt="">
 							<div class="space hidden-md hidden-lg"></div>
 						</div>
 						<div class="col-md-6">
@@ -450,25 +443,13 @@
 									<a href="#"><img src="images/client-3.png" alt=""></a>
 								</div>
 								<div class="client">
-									<a href="#"><img src="images/client-4.png" alt=""></a>
-								</div>
-								<div class="client">
-									<a href="#"><img src="images/client-5.png" alt=""></a>
-								</div>
-								<div class="client">
 									<a href="#"><img src="images/client-6.png" alt=""></a>
-								</div>
-								<div class="client">
-									<a href="#"><img src="images/client-7.png" alt=""></a>
-								</div>
-								<div class="client">
-									<a href="#"><img src="images/client-8.png" alt=""></a>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<blockquote class="inline">
-								<p class="margin-clear">Design is not just what it looks like and feels like. Design is how it works.</p>	
+								<p class="margin-clear">People who are crazy enough to think they can chagne the world are the ones who do.</p>	
 								<footer><cite title="Source Title">Steve Jobs </cite></footer>
 							</blockquote>
 						</div>
