--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <!--														<a href="blog.html" >Blog</a>-->
 													</li>
                                                     <li>
-														<a href="#footer" >Contact</a>
+<!--														<a href="#footer" >Contact</a>-->
 													</li>
 												</ul>
 											</div>
@@ -499,7 +499,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="#services">Services</a></li>
 <!--											<li><a href="blog-right-sidebar.html">Blog</a></li>-->
-											<li><a href="page-contact.html">Contact</a></li>
+<!--											<li><a href="page-contact.html">Contact</a></li>-->
 										</ul>
 									</div>
 								</nav>
