--- a/index.html
+++ b/index.html
@@ -360,14 +360,16 @@
 					<div class="container">
 						<div class="call-to-action">
 							<div class="row">
-								<div class="col-md-8">
+								<div class="col-md-8 col-md-offset-2">
 									<h1 class="title text-center">We help to transform your business to meet morden needs.</h1>
 								</div>
+<!--
 								<div class="col-md-4">
 									<div class="text-center">
 										<a href="#" class="btn btn-default btn-lg">Contact</a>
 									</div>
 								</div>
+-->
 							</div>
 						</div>
 					</div>
