--- a/index_old.html
+++ b/index_old.html
@@ -6,8 +6,8 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Qubits Solutions | Home</title>
-		<meta name="description" content="Qubits Solutions Ltd">
+		<title>Kodebot Limited | Home</title>
+		<meta name="description" content="Kodebot Limited">
 		<meta name="author" content="htmlcoder.me">
 
 		<!-- Mobile Meta -->
@@ -81,7 +81,7 @@
 
 								<!-- logo -->
 								<div class="logo">
-									<a href="index.html"><img id="logo" src="images/logo.png" alt="Qubits Solutions"></a>
+									<a href="index.html"><img id="logo" src="images/logo.png" alt="Kodebot Limited"></a>
 								</div>
 
 								<!-- name-and-slogan -->
@@ -752,7 +752,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<p>Copyright © 2016 Qubits Solutions. All Rights Reserved.</p>
+								<p>Copyright © 2019 Kodebot Limited. All Rights Reserved.</p>
 							</div>
 							<div class="col-md-6">
 								<nav class="navbar navbar-default" role="navigation">
