--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Qubits Solutions | Home</title>
+		<title>Kodebot Limited | Home</title>
 		<meta name="description" content="Website, Mobile App and Bespoke software solutions.">
 		<meta name="author" content="htmlcoder.me">
 
@@ -483,7 +483,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<p>Copyright © 2016 by Qubits Solutions Ltd. All Rights Reserved</p>
+								<p>Copyright © 2019 by Kodebot Limited. All Rights Reserved</p>
 							</div>
 							<div class="col-md-6">
 								<nav class="navbar navbar-default" role="navigation">
